# sparseml

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  NOTICE  README.md  pyproject.toml  remove_sparsezoo.awk  remove_sparsezoo_helpers.awk  remove_sparsezoo_registry.awk  setup.py.backup
.github/workflows/: Integrations-post-merge-check.yaml  build-release-wheel.yaml  build-wheel-and-container.yml  build-wheel.yml  integration-tests.yaml  integrations-check.yaml  quality-check.yaml  test-check.yaml  test-nightly.yml  test-weekly.yml  test-wheel-and-publish.yml  util.yml
docker/: Dockerfile  README.md
docker/containers/docker_dev/: Dockerfile
docker/containers/docker_nightly/: Dockerfile
docker/containers/docker_release/: Dockerfile
docs/: index.rst
docs/source/: onnx_export.md  recipes.md
docs/user-guide/: sparseml-docker.md
examples/: llama7b_w4a16_quantization.ipynb
integrations/: README.md
integrations/huggingface-transformers/: README.md
integrations/huggingface-transformers/tutorials/: sparse-transfer-learning-bert-python.md  sparse-transfer-learning-bert.md
integrations/huggingface-transformers/tutorials/question-answering/: question-answering-cli.md
integrations/huggingface-transformers/tutorials/sentiment-analysis/: docs-sentiment-analysis-python-custom-teacher-rottentomatoes.ipynb  docs-sentiment-analysis-python-sst2.ipynb  sentiment-analysis-cli.md
integrations/huggingface-transformers/tutorials/text-classification/: docs-text-classification-python-custom-teacher-tweeteval.ipynb  docs-text-classification-python-multi-label-go_emotions.ipynb  docs-text-classification-python-qqp.ipynb  docs-text-classification-python-sick.ipynb  text-classification-cli.md
integrations/huggingface-transformers/tutorials/token-classification/: docs-token-classification-python-conll2003.ipynb  docs-token-classification-python-custom-teacher-wnut.ipynb  token-classification-cli.md
integrations/old-examples/keras/notebooks/: classification.ipynb
integrations/old-examples/pytorch/notebooks/: classification.ipynb  detection.ipynb  sparse_quantized_transfer_learning.ipynb  torchvision.ipynb
integrations/old-examples/tensorflow_v1/notebooks/: classification.ipynb
integrations/torchvision/: README.md
integrations/torchvision/tutorials/: docs-torchvision-channelwise-4bit-transfer-imagenette.ipynb  docs-torchvision-python-transfer-imagenette.ipynb  docs-torchvision-sparsify-from-scratch-mobilenetv2-beans.ipynb  docs-torchvision-sparsify-from-scratch-resnet50-beans.ipynb  sparse-transfer-learning.md
integrations/ultralytics-yolov5/: README.md
integrations/ultralytics-yolov5/tutorials/: sparse-transfer-learning.md  sparsify-from-scratch.md
integrations/ultralytics-yolov8/: README.md
integrations/ultralytics-yolov8/tutorials/: sparse-transfer-learning.md
research/mfac/: README.md
research/mfac/tutorials/: gradual_pruning_with_mfac.md  one_shot_pruning_with_mfac.md
research/optimal_BERT_surgeon_oBERT/: README.md
research/optimal_BERT_surgeon_oBERT/tutorials/: oBERT_demo.ipynb
src/sparseml/: analytics.py  integration_helper_functions.py  version.py
src/sparseml/core/recipe/: recipe.py
src/sparseml/deepsparse/: base.py
src/sparseml/deepsparse/framework/: info.py
src/sparseml/evaluation/: README.md  registry.py
src/sparseml/evaluation/integrations/: lm_evaluation_harness.py  perplexity.py
src/sparseml/export/: validators.py
src/sparseml/keras/: base.py
src/sparseml/keras/framework/: info.py
src/sparseml/modifiers/quantization_legacy/utils/: quantization_scheme.py
src/sparseml/onnx/: base.py
src/sparseml/onnx/framework/: info.py
src/sparseml/onnx/sparsification/: info.py
src/sparseml/onnx/utils/: model.py
src/sparseml/openpifpaf/: __init__.py
src/sparseml/optim/: helpers.py
src/sparseml/pytorch/: __init__.py  base.py
src/sparseml/pytorch/datasets/: __init__.py
src/sparseml/pytorch/datasets/image_classification/: ffcv.md
src/sparseml/pytorch/framework/: info.py
src/sparseml/pytorch/image_classification/: README_image_classification.md  nm_image_classification.status.md  nm_image_classification.status.yaml  train.py
src/sparseml/pytorch/image_classification/utils/: trainer.py
src/sparseml/pytorch/models/: __init__.py  registry.py
src/sparseml/pytorch/nn/: __init__.py  activations.py
src/sparseml/pytorch/optim/: __init__.py  mask_pruning_scorer.py
src/sparseml/pytorch/sparsification/pruning/: modifier_pruning_movement.py
src/sparseml/pytorch/sparsification/quantization/: quantization_scheme.py
src/sparseml/pytorch/torchvision/: README.md  torchvision.status.md  torchvision.status.yaml  train.py  utils.py
src/sparseml/pytorch/utils/: __init__.py  ema.py  module.py
src/sparseml/recipe_template/: README.md
src/sparseml/tensorflow_v1/: base.py
src/sparseml/tensorflow_v1/framework/: info.py
src/sparseml/transformers/: base.py  token_classification.py
src/sparseml/transformers/docs/: QUESTION_ANSWERING.md  TEXT_CLASSIFICATION.md  TOKEN_CLASSIFICATION.md
src/sparseml/transformers/finetune/: README.md  runner.py  session_mixin.py  text_generation.py  training_args.py
src/sparseml/transformers/finetune/data/: custom.py
src/sparseml/transformers/sparsification/: training_args.py
src/sparseml/transformers/sparsification/modification/: base.py
src/sparseml/transformers/utils/: initializers.py
src/sparseml/utils/: __init__.py  helpers.py  imports.py
src/sparseml/utils/fsdp/: context.py  helpers.py
src/sparseml/yolact/: __init__.py
src/sparseml/yolov5/: __init__.py
src/sparseml/yolov8/: __init__.py  trainers.py
src/sparsezoo/: __init__.py
src/sparsezoo/utils/: __init__.py  registry.py
status/: STATUS.MD
tests/integrations/transformers/: args.py
tests/integrations/yolov5/: args.py
tests/sparseml/: test_import_error_logging.py  test_import_logging.py
tests/sparseml/core/recipe/: test_recipe.py
tests/sparseml/optim/: test_helpers.py
tests/sparseml/pytorch/: test_validation_padding.py
tests/sparseml/pytorch/optim/: test_mask_pruning_scorer.py
(+2 files in other folders)
