[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparseml"
version = "1.8.1.20241127"  # Update this manually or via script
authors = [
    {name = "Neuralmagic, Inc.", email = "support@neuralmagic.com"},
    {name = "100latent", email = "support@100latent.com"}
]
description = "Libraries for applying sparsification recipes to neural networks with a few lines of code, enabling faster and smaller models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.11"

dependencies = [
    "pyyaml>=5.0.0",
    "numpy>=1.17.0,<2.0",
    "matplotlib>=3.0.0",
    "merge-args>=0.1.0",
    "onnx>=1.5.0,<1.15.0",
    "pandas>=0.25.0",
    "packaging>=20.0",
    "psutil>=5.0.0",
    "pydantic>=2.0.0,<2.8.0",
    "requests>=2.0.0",
    "scikit-learn>=0.24.2",
    "scipy>=1.0.0",
    "tqdm>=4.0.0",
    "toposort>=1.0",
    "GPUtil>=1.4.0",
    "protobuf>=3.12.2,<=3.20.3",
    "click>=7.1.2,!=8.0.0",
    "torch>=1.7.0",
    "gputils",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4==4.9.3",
    "black==22.12.0",
    "black[jupyter]",
    "flake8==3.9.2",
    "isort==5.8.0",
    "wheel>=0.36.2",
    "pytest>=6.0.0",
    "pytest-mock>=3.6.0",
    "pytest-rerunfailures>=13.0",
    "tensorboard>=1.0,<2.9",
    "tensorboardX>=1.0",
    "parameterized",
]

docs = [
    "m2r2>=0.2.7",
    "mistune<3,>=2.0.3",
    "myst-parser>=0.14.0",
    "rinohtype~=0.4.2",
    "sphinx~=3.5.0",
    "sphinx-copybutton~=0.3.0",
    "sphinx-markdown-tables~=0.0.15",
    "sphinx-multiversion~=0.2.4",
    "sphinx-pydantic~=0.1.0",
    "sphinx-rtd-theme~=0.5.0",
    "docutils<0.17",
]

# Additional extras if you want to install them separately
llm = ["sentencepiece"]
torchvision = [
    "torchvision>=0.3.0,<0.17",
    "opencv-python<=4.6.0.66",
]
onnxruntime = ["onnxruntime>=1.0.0"]
deepsparse = ["deepsparse>=1.7.0"]
transformers = [
    "transformers>=4.51.3",
    "datasets>=3.3.0",
    "dvc",
    "seqeval",
    "einops",
    "evaluate>=0.4.1",
    "accelerate>=0.24.0",
    "safetensors>=0.4.1",
    "compressed-tensors", 
]

[project.urls]
Homepage = "https://github.com/100latent/sparseml"
Repository = "https://github.com/100latent/sparseml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sparseml", "sparseml.*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
default_section = "FIRSTPARTY"
ensure_newline_before_comments = "True"
force_grid_wrap = 0
include_trailing_comma = "True"
known_first_party = "sparseml,sparsezoo,tests"
known_third_party = "bs4,requests,packaging,yaml,pydantic,tqdm,numpy,onnx,onnxruntime,pandas,PIL,psutil,scipy,toposort,pytest,torch,torchvision,keras,tensorflow,merge-args,cv2,transformers,datasets,sklearn,seqeval"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

line_length = 88
lines_after_imports = 2
multi_line_output = 3
use_parentheses = "True"

[tool.flake8]
ignore = "E203, E251, E701, W503"
max-line-length = 88
